[package]
name = "flylang"
version = "0.1.1"
edition = "2024"

[workspace]
members = ["analyzer","common", "diagnostics","lexer", "lexparse-glue", "parser", "tree-traversal-executor"]

[dependencies]
flylang-common = { path = "common/" }
flylang-lexer = { path = "lexer/" }
flylang-parser = { path = "parser/" }
flylang-ast-analyzer = { path = "analyzer/" }
flylang-diagnostics = { path = "diagnostics/" }
flylang-tte = { path = "tree-traversal-executor/" }

log = "0.4.29"
env_logger = "0.11.8"
crossterm = "0.29.0"
