[package]
name = "flylang"
version = "0.1.2"
edition = "2024"

[workspace]
members = [
    "lang/analyzer",
    "lang/common",
    "lang/diagnostics", "lang/feathervm", "lang/feathervm-compiler", "lang/feathervm-definitions", "lang/feathervm-interpreter",
    "lang/lexer",
    "lang/lexparse-glue",
    "lang/parser",
    "lang/tree-traversal-executor"
]

[dependencies]
flylang-common = { path = "lang/common/" }
flylang-lexer = { path = "lang/lexer/" }
flylang-parser = { path = "lang/parser/" }
flylang-ast-analyzer = { path = "lang/analyzer/" }
flylang-lexparse-glue = { path = "lang/lexparse-glue/" }
flylang-diagnostics = { path = "lang/diagnostics/" }
flylang-tte = { path = "lang/tree-traversal-executor/" }
feathervm-compiler = { path = "lang/feathervm-compiler" }

log = "0.4.29"
env_logger = "0.11.8"
crossterm = "0.29.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
