[package]
name = "flylang-lexparse-glue"
version = "0.1.2"
edition = "2024"

[dependencies]
flylang-ast-analyzer = { path = "../analyzer" }
flylang-common = { path = "../common" }
flylang-lexer = { path = "../lexer" }
flylang-parser = { path = "../parser" }
flylang-diagnostics = { path = "../diagnostics" }
